--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -11,5 +11,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Echo secret
         run: echo $TF_TOKEN_APP_TERRAFORM_IO
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TERRAFORM_API_TOKEN }}
       # - name: Terraform init
       #   run: cd dns && terraform init
