--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -12,6 +12,6 @@ jobs:
       - name: Echo secret
         run: echo $TF_TOKEN_APP_TERRAFORM_IO
         env:
-          TF_TOKEN_app_terraform_io: ${{ secrets.TERRAFORM_API_TOKEN }}
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
       # - name: Terraform init
       #   run: cd dns && terraform init
