--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -9,9 +9,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Echo secret
-        run: echo $TF_TOKEN_APP_TERRAFORM_IO
+      - name: Terraform init
+        run: cd dns && terraform init
         env:
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
-      # - name: Terraform init
-      #   run: cd dns && terraform init
+      - name: Terraform plan
+        run: terraform plan -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
