--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -1,20 +1,22 @@
-name: Syntax check
+name: Apply DNS
 on: [push]
 jobs:
   syntax-check:
     runs-on: ubuntu-22.04
     environment: dns
+    defaults:
+      run:
+        working-directory: dns
+      env:
+        TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
     container:
       image: hashicorp/terraform:1.12.2
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Terraform init
-        run: cd dns && terraform init
-        env:
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
+        run: terraform init
       - name: Terraform plan
         run: terraform plan -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
