--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -1,8 +1,11 @@
 name: Apply DNS
-on: [push]
-
+on:
+  push:
+    branches:
+      - main
 env:
   TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
+  CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
 jobs:
   syntax-check:
@@ -17,8 +20,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Terraform init
-        run: terraform init
+        run: terraform init -input=false
       - name: Terraform plan
-        run: terraform plan -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        run: terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
+      - name: Terraform apply
+        run: terraform apply dns.plan
