--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -8,7 +8,7 @@ env:
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
 jobs:
-  syntax-check:
+  terraform-plan-and-apply:
     runs-on: ubuntu-22.04
     environment: dns
     defaults:
