--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -1,4 +1,4 @@
-name: Apply DNS
+name: Apply DNS changes
 on:
   push:
     branches:
@@ -8,9 +8,9 @@ env:
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
 jobs:
-  terraform-plan-and-apply:
+  terraform-plan:
     runs-on: ubuntu-22.04
-    environment: dns
+    environment: dns-tf-plan
     defaults:
       run:
         working-directory: dns
@@ -23,18 +23,21 @@ jobs:
         run: terraform init -input=false
       - name: Terraform plan
         run: terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
-      - name: Aprove terraform plan before pushing changes
-        uses: trstringer/manual-approval@v1
+      - name: Archive terraform plan
+        uses: actions/upload-artifact@v4
         with:
-          secret: ${{ github.TOKEN }}
-          approvers: matuzalemmuller
-          minimum-approvals: 1
-          issue-title: "Deploying DNS changes to CloudFlare"
-          issue-body: "Please approve or deny the DNS changes."
-          issue-body-file-path: dns.plan
-          exclude-workflow-initiator-as-approver: false
-          fail-on-denial: true
-          additional-approved-words: ''
-          additional-denied-words: ''
+          name: dns.plan
+          path: dns.plan
+  
+  terraform-apply:
+    runs-on: hashicorp/terraform:1.12.2
+    environment: dns-tf-apply
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dns.plan
       - name: Terraform apply
         run: terraform apply dns.plan
