--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Archive terraform plan
         uses: actions/upload-artifact@v4
         with:
-          name: dns.plan
+          name: dns/dns.plan
           path: dns.plan
   
   terraform-apply:
