--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -26,8 +26,8 @@ jobs:
       - name: Archive terraform plan
         uses: actions/upload-artifact@v4
         with:
-          name: dns/dns.plan
-          path: dns.plan
+          name: dns.plan
+          path: dns/dns.plan
   
   terraform-apply:
     runs-on: hashicorp/terraform:1.12.2
