--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -3,8 +3,10 @@ on:
   push:
     paths:
       - dns/**
+      - .github/worksflows/dns.yaml
     branches:
       - main
+
 env:
   TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
