--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -42,6 +42,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Terraform init
+        run: terraform init -input=false
       - name: Download a single artifact
         uses: actions/download-artifact@v4
         with:
