--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -12,7 +12,7 @@ env:
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
 jobs:
-  terraform-plan:
+  terraform_plan:
     runs-on: ubuntu-22.04
     environment: dns-tf-plan
     container:
@@ -20,25 +20,38 @@ jobs:
     defaults:
       run:
         working-directory: dns
+    outputs:
+      should_skip_apply: ${{ steps.set_skip.outputs.should_skip_apply }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Terraform init
         run: terraform init -input=false
       - name: Terraform plan
-        run: terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN"
+        id: set_skip
+        run: |
+          terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN" -detailed-exitcode
+          if [[ $? -eq 2 ]]; then
+            echo "should_skip=true" >> $GITHUB_OUTPUT
+          else
+            echo "should_skip=false" >> $GITHUB_OUTPUT
+          fi
       - name: Archive terraform plan
         uses: actions/upload-artifact@v4
         with:
           name: dns.plan
           path: dns/dns.plan
   
-  terraform-apply:
-    needs: terraform-plan
+  terraform_apply:
+    needs: terraform_plan
+    if: ${{ needs.terraform_plan.outputs.should_skip == 'false' }}
     runs-on: ubuntu-22.04
     container:
       image: hashicorp/terraform:1.12.2
     environment: dns-tf-apply
+    defaults:
+      run:
+        working-directory: dns
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
