--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -33,6 +33,7 @@ jobs:
           terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN" -detailed-exitcode
           if [[ $? -eq 2 ]]; then
             echo "should_skip=false" >> $GITHUB_OUTPUT
+            exit 0
           else
             echo "should_skip=true" >> $GITHUB_OUTPUT
           fi
