--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -33,10 +33,10 @@ jobs:
           terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN" -detailed-exitcode || exit_code=$?
           exit_code=${exit_code:-0}
           if [[ "$exit_code" -eq 2 ]]; then
-            echo "should_skip=false" >> $GITHUB_OUTPUT
+            echo "should_skip_apply=false" >> $GITHUB_OUTPUT
             exit 0
           elif [[ "$exit_code" -eq 0 ]]; then
-            echo "should_skip=true" >> $GITHUB_OUTPUT
+            echo "should_skip_apply=true" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Terraform plan failed with unexpected error (exit $exit_code)"
@@ -50,7 +50,7 @@ jobs:
   
   terraform_apply:
     needs: terraform_plan
-    if: ${{ needs.terraform_plan.outputs.should_skip == 'false' }}
+    if: ${{ needs.terraform_plan.outputs.should_skip_apply == 'false' }}
     runs-on: ubuntu-22.04
     container:
       image: hashicorp/terraform:1.12.2
