--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -67,6 +67,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dns.plan
-          path: ${{ GITHUB_WORKSPACE }}/dns/dns.plan
+          path: ${{ github.workspace }}/dns/dns.plan
       - name: Terraform apply
         run: terraform apply dns.plan
