--- a/.github/workflows/dns.yaml
+++ b/.github/workflows/dns.yaml
@@ -1,3 +1,5 @@
+# Apply DNS entries to cloudflare based on terraform
+# Only run for main branch and when dns/CI files are modified
 name: Apply DNS changes
 on:
   push:
@@ -7,6 +9,7 @@ on:
     branches:
       - main
 
+# Use environment variables from environments
 env:
   TF_TOKEN_app_terraform_io: ${{ secrets.TF_TOKEN_APP_TERRAFORM_IO }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -21,7 +24,7 @@ jobs:
       run:
         working-directory: dns
     outputs:
-      should_skip_apply: ${{ steps.set_skip.outputs.should_skip_apply }}
+      should_skip_apply: ${{ steps.set_skip.outputs.should_skip_apply }}    # If there are no changes, the next plan uses this var to skip the step
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,6 +32,7 @@ jobs:
         run: terraform init -input=false
       - name: Terraform plan
         id: set_skip
+        # Force success, while capturing the actual exit code. Then, output variable to GITHUB_OUTPUT
         run: |
           terraform plan -out=dns.plan -input=false -var "cloudflare_api_token=$CLOUDFLARE_API_TOKEN" -detailed-exitcode || exit_code=$?
           exit_code=${exit_code:-0}
@@ -43,7 +47,7 @@ jobs:
             exit $exit_code
           fi
       - name: Archive terraform plan
-        if: steps.set_skip.outputs.should_skip_apply == 'false'
+        if: steps.set_skip.outputs.should_skip_apply == 'false' # Only run if there are changes to apply
         uses: actions/upload-artifact@v4
         with:
           name: dns.plan
@@ -51,7 +55,7 @@ jobs:
   
   terraform_apply:
     needs: terraform_plan
-    if: ${{ needs.terraform_plan.outputs.should_skip_apply == 'false' }}
+    if: ${{ needs.terraform_plan.outputs.should_skip_apply == 'false' }} # Only run if there are changes to apply
     runs-on: ubuntu-22.04
     container:
       image: hashicorp/terraform:1.12.2
